src/binding/petsc4py/src/include/custom.h

#define PETSC_ERR_PYTHON ((PetscErrorCode)(-1))
PETSC_EXTERN PetscErrorCode (*PetscPythonMonitorSet_C)(PetscObject,const char*);
static PetscStageLog petsc_stageLog = NULL;